# interpreter

./: CMakeLists.txt
src/code/: main.cpp
src/code/lexer/: Lexer.cpp  Lexer.h
src/code/scanner/: Lexeme.h  Node.cpp  Node.h  Sanner.cpp  Sanner.h  TypeLexeme.h  defs.h  scaner.cpp  scaner.h
src/code/tree/: Tree.cpp  Tree.h
src/resources/: code.txt  fibonachi.txt  testcode1.txt  testcode2.txt  testcode3.txt  testcode4.txt  testcode5.txt  testcode6.txt
